public_html/static/css/style.css
/* ... */
.sprite-facebook{
	background-position: -352px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-youtube{
	background-position: -384px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}

/* picto styles*/
.picto{
	margin-top: 1em;
	text-align: center;
}
.picto a{
	display: block;
	margin-bottom: 2em;
}
.picto h2{
	margin-top: 1em;
}

.billingInfo{
	font-size: 1.5em;
	margin-top: 5em;
	text-align: center;
}
.billingInfo h2{
}
.t733{
	letter-spacing: 3px;
}
.billingInfo .msg{
	min-height: 125px;
	height: 125px;
	padding:14px 1.5em;
}
.billingInfo .msg.bank{
	font-size: 0.9em;
	line-height: 30px;
}
.billingInfo .msg.bank .spay-64-resalat{
	margin: 0 auto;
}
.billingInfo .msg.donateLink .btn{
	height:95px;
	line-height:83px;
}
.latestNews{
	margin-top: 7em;
}


/* footer*/
#sFooter{
	font-size: 1.3em;
	background-color: #e4e4e4;
	padding-top: 120px;
	position: relative;
	background-image: url('../images/homepage-v3/footer-pattern.png');
	background-repeat: repeat-x;
	background-position: bottom;
	color: #333;
	animation: animatedBackground 60s linear infinite;
    /* force hardware acceleration */
    -webkit-transform: translateZ(0);
	-webkit-animation-name: animatedBackground;
	-webkit-animation-duration: 60s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-timing-function: linear;
	-webkit-animation-fill-mode: forwards;
	-webkit-animation-delay: 0.01s;
}
@keyframes animatedBackground {
	from { background-position: 0 bottom; }
	to { background-position: 100% bottom; }
}
@-webkit-keyframes animatedBackground {
	0% { -webkit-background-position: 0 bottom; }
	25% { -webkit-background-position: 25% bottom; }
	50% { -webkit-background-position: 50% bottom; }
	75% { -webkit-background-position: 75% bottom; }
	100% { -webkit-background-position: 100% bottom; }
}
#sFooter .cn{
	overflow:hidden;
}
#sFooter .brand{
	width: 140px;
	height: 140px;
	padding: 10px;
	position: absolute;
	right: 0;
	left: 0;
	top: -70px;
	margin:0 auto;
	background-color: #f5f5f5;
	border-radius: 50%;
	transition: 0.3s;
	user-select: none;
	border: 1px solid transparent;
}
#sFooter:hover .brand{
	border-color: #fff;
}
#sFooter .brand:hover{
	background-color: #fff;
}
#sFooter .brand:before{
	content: "";
	height:88px;
	width: 184px;
	position: absolute;
	right: -22px;
	top: 70px;
	margin:0 auto;
	background-image: url('../images/homepage-v3/sprite.png');
	background-position: -450px -300px;
}
#sFooter .brand h2{
	display: none;
}
#sFooter h3{
	font-size: 1.4em;
	color: #777;
}
#sFooter nav{
	margin-bottom:1em;
}
#sFooter nav a{
	display: block;
	transition:0.3s;
	padding:5px 0.5em;
	line-height: 20px;
}
#sFooter nav a:hover{
	background-color: rgba(0,0,0,0.05);
}
#sFooter nav a:focus{
	background-color: rgba(0,0,0,0.1);
}
/* share links*/
.shareC{
	user-select: none;
	margin: 1em auto 2em;
}
.shareC a{
	position:relative;
	display:inline-block!important;
	overflow:hidden;
	margin:2px;
	width:32px;
	height:32px;
	padding: 0!important;
	font-size:0!important;
	line-height:0!important;
	border-radius:1px;
	background-color:rgba(0,0,0,0.02);
}
#sFooter hr{
	border-color: #aa6523;
	position: relative;
	margin:50px auto 70px;
	max-width: 100%;
}
#sFooter hr:before{
	content: "";
	height:60px;
	width: 580px;
	max-width: 100%;
	position: absolute;
	right: 0;
	left: 0;
	top: -30px;
	margin:0 auto;
	background-image: url('../images/homepage-v3/sprite.png');
	background-color: #e4e4e4;
	background-position: 0 -420px;
}
#sFooter #copyright{
	border-top: 1px solid #aa6523;
	padding: 1em 0;
	user-select: none;
}
#sFooter #copyright a{
	padding:5px 0;
	transition:0.3s;
	line-height: 25px;
	border-bottom:1px dashed transparent;
	display: inline-block;
}
#sFooter #copyright a:hover{border-bottom:1px dashed #aaa}
#sFooter #copyright a:focus{background-color: rgba(0,0,0,0.1);}


.msg.simple{
	border-color: #aa6523;
	background-color: #eee;
}
.msg.simple:hover{
	border-color: #5a2f06;
}

.pageData{
	font-size: 1.4em;
	color: #777;
}
.pageTitle{
	text-align: center;
	padding-top: 2em;
}
.pageTitle .sB3{
	font-size: 1em;
}
.pageData hr, hr.special{
	border-color: #00aaaa;
	position: relative;
	margin:50px auto 70px;
	max-width: 100%;
}
.pageData hr:before, hr.special:before{
	content: "";
	height:40px;
	width: 120px;
	max-width: 100%;
	position: absolute;
	right: 0;
	left: 0;
	top: -20px;
	margin:0 auto;
	background-image: url('../images/homepage-v3/sprite.png');
	background-color: #f5f5f5;
	background-position: -320px -350px;
}

.pageData .postPreview{}
.pageData .postPreview img.thumb{width:300px;height:auto;display:inline-block;margin:0 auto;padding:0;margin:0.5em;border:1px solid transparent;transition:0.3s}
.pageData .postPreview img.thumb:hover{border-color:#333}
.pageData .postMainContent{overflow: hidden;}
.pageData #lightgallery{text-align:center; margin:2em 0;clear: both;}
.pageData #lightgallery img{width:200px;max-width:45%; margin:0 auto;}
.pageData #lightgallery video{width:200px;max-width:45%; margin:0 auto;}
.pageData #lightgallery audio{width:200px;max-width:45%; margin:0 auto;}

.pageData .gallery2{text-align:center;}
.pageData .gallery2 video{width:500px;max-width:90%;margin:1em auto;display:inline-block;}
.pageData .gallery2 audio{width:250px;max-width:90%;margin:1em auto;display:inline-block;}

.pageData .postListPreview{width:70%;min-width:280px;margin:0 auto;}
.pageData .postListPreview section{border-bottom:1px dashed #ccc;margin-bottom:3em;}
.pageData .postListPreview img{}
.pageData .postListPreview h3{margin-top:0;}

.tagBox a{padding:0.5em 0.5em;margin:0.5em 0.5em;background-color:#eee;border-radius:3px;transition:0.3s;display:inline-block;}
.tagBox a:hover{background-color:rgba(0,0,0,0.1);}
.tagBox a:focus{background-color:rgba(0,0,0,0.2);}

/* contact vcard*/
/*vcard*/
.vcard .adr{padding:1em 0;font-style:normal;}
.vcard .adr div, .vcard .adr span, .vcard .email, .vcard .tel{display:block;padding:0.5em 1em}
.vcard .adr span{display:inline-block;}
/* ... */

